# 5.5.-Prediction-of-soil-type-using-the-Linear-multidimensional-interpolation-method

./: CMakeLists.txt  README.md  main.cpp  mnogomernyy-algoritm-lineynoy-interpolyatsii-so-sglazhivaniem-na-simpleksnom-pokrytii-oblasti-s-proizvolnym-raspredeleniem-uzlov-neregulyarnoy-setki.docx
Lib/: 9DInterp.cpp  9DInterp.h
data/: Exel.txt
data/bkp/: Exel.txt  point.txt  src.txt
